[package]
name = "open-vnc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
rfb = { path = "rfb" }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
scrap = "0.5.0"